<resources>
    <string name="app_name">RoadEye</string>
    <string name="gps_disabled">GPS is disabled</string>
    <string name="please_enable_gps">Please enable GPS to use all features of this app.</string>
    <string name="waiting_for_fix">Waiting for GPS fix…</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="camera_error">Camera error</string>
    <string name="about">About</string>
    <string name="about_title">About RoadEye</string>
    <string name="developer_name">akapatil</string>
    <string name="developer_label">Developer</string>
    <string name="version_label">Version</string>
    <string name="version_value">2.0.0</string>
    <string name="app_description">Real-time traffic sign detection and recognition system using TensorFlow Lite and computer vision. Developed with advanced safety features for drivers.</string>
    <string name="clear_history">Clear History</string>
    <string name="clear_history_confirm">Are you sure you want to clear all detected signs?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="total_signs_detected">Signs Found</string>
    <string name="max_speed">Max Speed</string>
    <string name="session_duration">Duration</string>
    <string name="kmh">km/h</string>
    <string name="detected_signs">Detected Signs</string>
    <string name="current_distance">Current</string>
    <string name="total_distance">Total</string>
    <string name="statistics">Statistics</string>
    <string name="speed_limit">Speed Limit</string>
    <string name="no_limit_detected">---</string>
    <string name="exceeding_limit">EXCEEDING!</string>
    <string name="under_limit">Within Limit</string>
    <string name="settings">Settings</string>
    <string name="theme_mode">Theme</string>
    <string name="light_mode">Light</string>
    <string name="dark_mode">Dark</string>
    <string name="system_mode">System</string>
    <string name="notification_volume">Voice Volume</string>
    <string name="haptic_feedback">Vibrate on Detection</string>
    <string name="speed_alert">Speed Alert</string>
    <string name="trip_timer">Trip Timer</string>
    <string name="no_signs_detected_yet">No signs detected yet</string>
    <string name="speed_limit_detected">Limit Detected</string>
</resources>